# rust-encryption-junk-yard

./: README.md
OTP2/: Cargo.toml  README.md
OTP2/docs/: readthis.html
PHP/: README.md
PHP/ib1/: README.md  index.php
PHP/ib3/tinyib1/: index.html  settings.php
PHP/ib3/tinyib1/inc/: html.php
PHP/ib4/: index.php  readme.md
PHP/ib4/css/: styles.css
PHP/ib5/: index.php  readme.md
PHP/ib6/: notes.txt  zzzindex.php
PHP/ib6/uploads/: message_board.db
PHP/ib7/: about.txt  index.php  mod.php
PHP/ib8/: index.php  main.js  readme.md
Rust/: README.md
Rust/ib/: Cargo.toml  readme.md
Rust/ib/src/: main.rs
Rust/ib1/: filestructure.txt  readme.md
Rust/ib1/src/: main.rs
Rust/ib2/: Cargo.toml  index.html  readme.md
Rust/ib2/src/: main.rs
Rust/ib3/: Cargo.toml  base.html  filestructure.txt  readme.md
Rust/ib3/src/: main.rs
Rust/ib3/static/: default.css
Rust/ib4/: Cargo.toml  all.bat  file_dump.txt
Rust/ib4/migrations/: 20260102123456_create_posts_table.sql
Rust/ib4/static/: default.css
ThreefishRUST/: Cargo.toml
ThreefishRUST/docs/: readme.html
ThreefishRUST/src/: main.rs
VOTP/: Cargo.toml
VOTP/src/: key.rs
ascon-main/ascon-main/: Cargo.toml  readme.md  readthis.html
ascon-main/ascon-main/src/: main.rs
e001/: README.md
e001/Pure-Rust-Encryption-Apps/: README.md
e001/Pure-Rust-Encryption-Apps/keyy/: compile.txt  keyy.rs  keyyreadme.html  readme.md
e001/Pure-Rust-Encryption-Apps/rzenc/: readme.md  rzenc.rs  rzenc_readme.html
e001/ThreefishRUST/: README.md
e001/VOTP/: README.md
e001/VOTP/extra/windows-utils/: all.bat
e001/VOTP/src/: main.rs  util.rs
e001/sps/: Cargo.toml  README.md
e001/sps/extra/: readthis.html  run.bat  test.txt
e001/sps/src/: main.rs
e001/threefish1024_app/: Cargo.toml  readme.md
e001/threefish1024_app/src/: main.rs
e001/threefish512_app/: Cargo.toml  README.md
e001/threefish512_app/extra/: a.bat  b.bat  c.bat  key.key  readthis.html
e001/threefish512_app/src/: main.rs
grabby/: README.md  clone_all_repos.sh
linux/: README.md
linux/AES-256-GCM-SIV/: Cargo.toml  README.md
linux/AES-256-GCM-SIV/src/: main.rs
linux/OTP2/src/: main.rs
linux/RSE/: Cargo.toml  README.md
linux/RSE/docs/: rse_guide.html
linux/RSE/src/: main.rs
linux/ai/: readme.md
linux/ai/1/: Cargo.toml  readme.md
linux/ai/2/: Cargo.toml
linux/keymaker/: Cargo.toml  readme.md
linux/keymaker/notes/: cargo.txt
linux/keymaker/src/: main.rs
linux/lockr/: Cargo.toml  README.md
linux/lockr/docs/: readthis.html
linux/lockr/src/: main.rs
linux/rage-helper/: encrypt_decrypt.sh  readme.md
linux/rage-helper/docs/: command.txt
linux/safecrypt/: Cargo.toml  README.md
linux/safecrypt/src/: main.rs
linux/secure/: README.md
linux/secure/a/: Cargo.toml
linux/secure/a/docs/: enc.html
linux/secure/a/src/: main.rs
linux/secure/secure1/: Cargo.toml
linux/secure/secure1/docs/: start.txt
linux/secure/secure1/src/: main.rs
linux/xcha/: Cargo.toml
linux/xcha/src/: main.rs
linux/xcha1/: Cargo.toml  readme.md
linux/xcha1/src/: main.rs
linux/xor/: Cargo.toml  readme.md
linux/xor/src/: main.rs
numbers/: README.md
numbers/1/src/: main.rs
numbers/2/: readme.md
numbers/2/src/: main.rs
numbers/3/: Cargo.toml
numbers/4/: Cargo.toml  readme.md
numbers/4/src/: main.rs
numbers/5/: Cargo.toml
numbers/5/src/: main.rs
numbers/base64/: Cargo.toml  readme.md
numbers/base64/src/: main.rs
numbers/key32/: Cargo.toml  readme.md
numbers/key32/src/: main.rs
otp/src/: main.rs
otp88/: README.md
otp88/otp-rs/: Cargo.toml  README.md
otp88/otp-rs/src/: main.rs
otp88/otp-rs/tests/: integration.rs  run_all_tests.rs
otp88/otp-rs/tests/data/: large.txt  medium.txt  small.txt
otp88/otp-rs1/: Cargo.toml  README.md  all.sh  all.txt  readme.html
otp88/otp-rs1/src/: keygen.rs  main.rs
otp88/otp-rs1/tests/: generate_random_files.rs
reed/: Cargo.toml  README.md  allfiles.sh
reed/src/: archive.rs  crypto.rs  format.rs  lib.rs  repair.rs
reed/tests/: corruption_repair.rs  header_redundancy.rs  large_roundtrip.rs  repair.rs  roundtrip.rs
rpass/: Cargo.toml  README.md
rpass/extras/: all.bat
rpass/src/: main.rs
securecrypt/: readme.md
securecrypt/src/: main.rs
tf/: readme.md
xcha/: readme.md
