[package]
name         = "otp2"            # or your crate name
version      = "3.1.0"          # your version
edition      = "2021"
rust-version = "1.78"
license      = "MIT OR Apache-2.0"
# authors/description/etc... (optional)

[dependencies]
anyhow    = "1.0"
clap      = { version = "4.5", features = ["derive"] }
fs2       = "0.4"
zeroize   = "1"
tempfile  = "3"
same-file = "1.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
  "winnt", "aclapi", "accctrl", "securitybaseapi", "handleapi", "errhandlingapi", "winbase"
] }

[workspace]
resolver = "2"
