[package]
name        = "votp"
version     = "2.2.0"
edition     = "2021"
rust-version = "1.78"
authors     = ["You <you@example.com>"]
description = "Versatile, hardened one-time-pad XOR utility (with optional deterministic key generator)"
license     = "MIT OR Apache-2.0"

# ──────────────────────────── Dependencies ───────────────────────────────
[dependencies]
clap    = { version = "4.5", features = ["derive"] }
anyhow  = "1.0"

# Optional terminal progress bar (only compiled with `--features progress`)
indicatif = { version = "0.17", optional = true }

# Atomic temp-file handling, locking, timestamps
tempfile = "3"
fs2      = "0.4"
filetime = "0.2"
libc     = "0.2"                 # for O_NOFOLLOW on Unix

# Security hygiene
zeroize  = "1"

# Optional extras for OTP verifier & Unix xattrs
sha2  = { version = "0.10", optional = true, default-features = false }
atty  = { version = "0.2",  optional = true }
xattr = { version = "1",    optional = true }

# Deterministic key generator (feature = "keygen")
argon2      = { version = "0.5", optional = true, default-features = false }
base64      = { version = "0.22", optional = true }
blake3      = { version = "1.5",  optional = true }
rand        = { version = "0.8",  optional = true, default-features = false, features = ["std"] }
rand_chacha = { version = "0.3",  optional = true, default-features = false }
rpassword   = { version = "7",    optional = true }
subtle      = { version = "2.5",  optional = true }

# ──────────────────────────── Feature matrix ─────────────────────────────
[features]
# Default now includes keygen, so the key maker is always built unless explicitly disabled
default  = ["keygen"]

verify   = ["sha2", "atty", "subtle"] # SHA-256 printing/compare (constant-time)
xattrs   = ["xattr"]                  # preserve Unix extended attributes

# Deterministic key generator (`votp keygen …`)
keygen   = [
  "argon2",
  "base64",
  "blake3",
  "rand",
  "rand_chacha",
  "rpassword",
  "subtle",
]

# Live progress bar
progress = ["indicatif"]

[workspace]
resolver = "2"

# ─────────── Target-specific dependencies (Windows) ───────────
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
  "winnt",            # SECURITY_INFORMATION flags, FILE mask
  "aclapi",           # SetNamedSecurityInfoW
  "accctrl",          # SE_FILE_OBJECT
  "securitybaseapi",  # GetSecurityDescriptorDacl
  "handleapi",
  "errhandlingapi",
  "winbase",          # LocalFree
  "fileapi",          # GetFileInformationByHandle
  "minwinbase",       # BY_HANDLE_FILE_INFORMATION
  # NOTE: no "sddl" feature needed; we FFI the SDDL function directly
] }
