[package]
name = "ib"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1.49", features = ["full"] }
html-escape = "0.2"
tower-http = { version = "0.6", features = ["fs"] }
chrono = "0.4"
uuid = { version = "1.10", features = ["v4", "fast-rng"] }
shakmaty = "0.30"