[package]
name = "threefish512_app"
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
hex = "0.4"
zeroize = "1.6"
rand = "0.8"
windows-sys = { version = "0.52", features = ["Win32_Foundation","Win32_Storage_FileSystem"] }
