[package]
name = "sivcrypt-pro"
version = "0.2.0"
edition = "2021"

[dependencies]
aes-gcm-siv = "0.11"
argon2 = "0.5"
rand = "0.8"
clap = { version = "4.5", features = ["derive"] }
rpassword = "7.4"
zeroize = "1.8"
anyhow = "1.0"
fs2 = "0.4"
indicatif = "0.17"
filetime = "0.2"
subtle = "2.5"
atomic-write-file = "0.2"
