[package]
name = "safecrypt"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0"
hex = "0.4"
windows-sys = { version = "0.59.0", features = ["Win32_Foundation", "Win32_Storage_FileSystem"] }
libsodium-sys-stable = { version = "1.22", features = ["fetch-latest", "optimized"] }
zeroize = "1.8"
