[package]
name = "xcha"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
description = "Minimal file encrypt/decrypt tool"
authors = ["Grok and ChatGPT"]
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
chacha20poly1305 = "0.10.1"
rand = { version = "0.8", features = ["getrandom"] }
tempfile = "3.13"
rpassword = "7.4"
scrypt = "0.10.0"