[package]
name = "xor"
version = "0.1.0"
edition = "2024"
rust-version = "1.94"  # Matches your toolchain - modern Rust only
description = "Simple XOR file obfuscator using a repeating key file"
authors = ["Grok and ChatGPT"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
tempfile = "3.27.0"