[package]
name = "otp-rs"
version = "0.1.0"
edition = "2024"
rust-version = "1.94.0"
description = "Linux-only CLI for OTP-style XOR encryption with Reed-Solomon + deterministic key generator"
default-run = "otp-rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
reed-solomon = "0.2"
rand = "0.8"
rpassword = "7.3"
argon2 = { version = "0.5", features = ["std"] }     # ← added "std" feature
chacha20 = "0.9"
cipher = "0.4"
byte-unit = "5.1"

[dev-dependencies]
assert_cmd = "2.0"
tempfile = "3.6"
rayon = "1.7"