[package]
name = "secureapp"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
rpassword = "7.3"
rand = "0.8"
zeroize = "1.8"
chacha20poly1305 = "0.10"
argon2 = "0.5"
hkdf = "0.12"
sha2 = "0.10"
generic-array = { version = "0.14", features = ["zeroize"] }
typenum = "1.17"
fs2 = "0.4"